--- a/app.wxss
+++ b/app.wxss
@@ -6,36 +6,6 @@
   flex-direction: column;
   align-items: center;
   /* justify-content: space-between; */
-  padding: 30rpx;
+  /* padding: 30rpx; */
   box-sizing: border-box;
 } 
-.block{
-  width: 100%;
-  border: 1rpx solid #ccc;
-}
-.meet-title{
-  padding:15rpx 5rpx 20rpx;
-}
-.meet-owner{
-  font-size: 25rpx;
-  padding-bottom:10rpx;
-  
-}
-.meet-summary{
-  color: 	#A9A9A9;
-  font-size: 26rpx;
-  padding-bottom:10rpx;
-}
-.meet-date{
-  font-size: 23rpx;
-  color: 	#A9A9A9;
-  margin-right:20rpx;
-  text-align:right;
-
-}
-.meet-block{
-  margin-bottom: 15rpx;
-  background-color:#fff;
-  padding: 10rpx 10rpx;
-  border-radius:10rpx;
-}
