--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -11,11 +11,57 @@
   margin: 20rpx;
   border-radius: 50%;
 }
-
 .userinfo-nickname {
   color: #aaa;
 }
+.focus-item{
 
+}
+.bar-item{
+  
+}
 .usermotto {
   margin-top: 200px;
+}
+.bar{
+  flex-direction: row;
+  text-align: center;
+  padding: 5% 0%;
+  /* height: 50px;  */
+  width:100%;
+  background-color:whitesmoke;
+}
+.block{
+  width: 100%;
+  border: 1rpx solid #ccc;
+}
+.meet-list{
+  padding: 30rpx;
+}
+.meet-title{
+  padding:15rpx 5rpx 20rpx;
+}
+.meet-owner{
+  font-size: 25rpx;
+  padding-bottom:10rpx;
+  
+}
+.meet-summary{
+  color: 	#A9A9A9;
+  font-size: 26rpx;
+  padding-bottom:10rpx;
+}
+.meet-date{
+  font-size: 23rpx;
+  color: 	#A9A9A9;
+  margin-right:20rpx;
+  text-align:right;
+
+}
+.meet-block{
+  margin-top:10rpx;
+  margin-bottom: 15rpx;
+  background-color:#fff;
+  padding: 10rpx 10rpx;
+  border-radius:10rpx;
 }
