--- a/pages/launch/launch.wxss
+++ b/pages/launch/launch.wxss
@@ -11,6 +11,13 @@ span{
   width: 100%;
   font-size:15px;
   margin:10px 0px;
-
+}
+.launchWrap{
+  padding:20px 10px;
+}
+.launchBtn{
+   background:green; 
+  /* background:#87CEFA; */
+  color:#fff;
 
 }
