--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,7 +1,7 @@
 <!--logs.wxml-->
 <view class="container log-list">
-  <block wx:for="{{logs}}" wx:for-item="log">
+  <!-- <block wx:for="{{logs}}" wx:for-item="log">
     <text class="log-item">{{index + 1}}. {{log}}</text>
-  </block>
-  <span>here is the page of mine</span>
+  </block> -->
+  <span>here is the page of detail</span>
 </view>
