--- a/pages/launch/launch.wxml
+++ b/pages/launch/launch.wxml
@@ -1,10 +1,10 @@
 <!--logs.wxml-->
 <view class="container">
-  <span >会议主题</span>
+  <span class="vtitle">会议主题</span>
   <input class="vinput" placeholder='输入会议主题'></input>
-  <span >分享人</span>
+  <span class="vtitle">分享人</span>
   <input class="vinput" placeholder='输入分享人'></input>
-  <span >概要</span>
+  <span class="vtitle">概要</span>
   <textarea class="vinput" placeholder='输入概要'></textarea>
   <view class="launchWrap">
     <button class="launchBtn">发起项目</button>
