--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,8 +1,8 @@
 <!--index.wxml-->
 <view class="container">
   <view class="bar">
-    <view bindtap="cutBar" class="bar-item flex-item ">近期会议</view>
-    <view bindtap="cutBar" class="bar-item flex-item ">我参与的</view>
+    <view bindtap="cutBar" data-name="meets" class="bar-item flex-item {{currentTab=='meets'?' active':''}}">近期会议</view>
+    <view bindtap="cutBar" data-name="mine" class="bar-item flex-item {{currentTab=='mine'?' active':''}} ">我参与的</view> 
   </view>
   <view class="meet-list">
     <block  wx:for-items="{{list}}" wx:key="index">
