--- a/pages/launch/launch.wxml
+++ b/pages/launch/launch.wxml
@@ -7,6 +7,6 @@
   <span class="vtitle">概要</span>
   <textarea class="vinput" placeholder='输入概要'></textarea>
   <view class="launchWrap">
-    <button class="launchBtn">发起项目</button>
+    <button bindtap="launchMeet" class="launchBtn">发起项目</button>
   </view>
 </view>
